# vertex-care

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.api  LICENSE  Makefile  README.md  dashboard.py  pyproject.toml  requirements.txt  run_clustering_pipeline.py  run_pipeline.py  run_routing_pipeline.py
.github/workflows/: ci.yml  deploy-ui.yml  deploy.yaml  deploy.yml
configs/: README.md  model_params.yaml  routing_policy.yaml
models/: imputer.joblib  patient_cluster_model.joblib
models/2025-09-09_03-00-11_logistic_regression/: logistic_regression_model.joblib  model_metrics.json
models/2025-09-09_03-37-14_logistic_regression/: logistic_regression_model.joblib  model_metrics.json
notebooks/: 03_cluster_analysis.ipynb
scripts/: add_mock_notes.py  dashboard.py  run_clustering_pipeline.py  run_pipeline.py  run_routing_pipeline.py
tests/: test_agent_e2e.py  test_ingestion.py
vertexcare/: .gitignore
vertexcare.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
vertexcare/agents/: agent_tools.py  chw_agent.py
vertexcare/api/: main.py  routing_engine.py
vertexcare/configs/: cluster_config.yaml  data_schema.yaml  main_config.yaml  model_params.yaml
vertexcare/data_processing/: ingestion.py  validation.py
vertexcare/feature_engineering/: build_features.py  llm_feature_extractor.py
vertexcare/features/: build_features.py  llm_feature_extractor.py
vertexcare/model_training/: cluster_patients.py  train_model.py
vertexcare/models/: model_metrics.json  train_model.py  xgboost_model.joblib
vertexcare/utils/: gcp_utils.py
(+4 files in other folders)
