[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vertexcare"
version = "0.1.0"
description = "A pipeline to predict patient readmission and route interventions."
readme = "README.md"
requires-python = ">=3.8"
# ADDED: Explicitly list the core dependencies for the project.
dependencies = [
    "pandas",
    "pyyaml",
    "pyarrow",
    "scikit-learn",
    "xgboost",
    "lightgbm",
    "fastapi",
    "uvicorn",
    "joblib",
    "shap",
]

# This section tells pip what extra packages are needed for testing.
[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools]
packages = ["vertexcare"]

[tool.pytest.ini_options]
pythonpath = "."

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
